<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Bottle Image -->
    <ImageView
        android:id="@+id/bottleImage"
        android:layout_width="200dp"
        android:layout_height="300dp"
        android:layout_centerInParent="true"
        android:src="@drawable/bottle"
        android:contentDescription="@string/bottle_description" />

    <!-- Spin Count Text Below Bottle -->
    <TextView
        android:id="@+id/spinCountText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Spins: 0"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:layout_below="@id/bottleImage"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"/>

    <!-- Spin Button -->
    <Button
        android:id="@+id/spinButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/spin_bottle"
        android:layout_below="@id/spinCountText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />

    <!-- Truth and Dare Buttons -->
    <LinearLayout
        android:id="@+id/truthDareLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="16dp"
        android:layout_below="@id/spinButton">

        <Button
            android:id="@+id/truthButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/truth" />

        <Button
            android:id="@+id/dareButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/dare" />
    </LinearLayout>

    <!-- Home Button -->
    <Button
        android:id="@+id/homeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="20dp" />
</RelativeLayout>
